compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_left_parenthesis.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2282
expression: "pub fn main（) { Nil }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main（) { Nil }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:12
  │
1 │ pub fn main（) { Nil }
  │            ^^ Unexpected character

This looks like ascii left parenthesis, but it is actually the unicode
fullwidth left parenthesis.
